--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
   "bugs": {
     "url": "https://github.com/jibblol/hotellapi/issues"
   },
-  "homepage": "https://github.com/jibblol/hotellapi#readme"
+  "homepage": "https://github.com/jibblol/hotellapi#readme",
+  "dependencies": {
+    "json-server": "0.10.1"
+  }
 }
